refactor(companion): T5 换虚拟线程执行器 + CurrentUser 透传
- executor: newCachedThreadPool → newVirtualThreadPerTaskExecutor
  每 SSE 请求独立一个虚拟线程，高并发下不再无界扩张平台线程
- 请求线程取 uid = CurrentUser.get()，lambda 内 set(uid) + finally clear()
  ThreadLocal 不跨线程，透传保证 SSE 线程内下游逻辑可见身份
- @PreDestroy shutdown() 逻辑保持不变（虚拟线程执行器同样支持）
- T1 assertSelf 第一行不动（越权校验在请求线程完成）

仅改 CompanionController.java，未引入新依赖（JDK 21 stdlib）

Tests: ./mvnw test → 279 passed, 0 failures, 0 errors (BUILD SUCCESS)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>